[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_j4k8l"]
[ext_resource type="FontFile" uid="uid://deg2678b2066r" path="res://Assets/Font/Minecraft.ttf" id="2_p9m6n"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j4k8l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_p9m6n")
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_p9m6n")
theme_override_font_sizes/font_size = 24
text = "PUNTUACIÓN FINAL: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RestartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_p9m6n")
theme_override_font_sizes/font_size = 20
text = "REINTENTAR"

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_p9m6n")
theme_override_font_sizes/font_size = 20
text = "MENÚ PRINCIPAL"